{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 10,
  "lineage": "9662e973-1ed4-a1fd-d1c2-f23fe649cde9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "fair_fairytale_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06f1b14a64e70dbb5",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-00b1a7d4c8d3004e2",
            "domain": "vpc",
            "id": "eipalloc-06f1b14a64e70dbb5",
            "instance": "i-09bf540592a371d48",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0359d4dabcfd0b221",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-54-204-251-102.compute-1.amazonaws.com",
            "public_ip": "54.204.251.102",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.fair_fairytale_gateway",
            "aws_network_interface.fair_fairytale_network_interface",
            "aws_security_group.fair_fairytale_security_group",
            "aws_subnet.fair_fairytale_subnet",
            "aws_vpc.fair_fairytale_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fair_fairytale_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0ea68c435eb488d",
            "arn": "arn:aws:ec2:us-east-1:958616324330:instance/i-09bf540592a371d48",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09bf540592a371d48",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0359d4dabcfd0b221"
              }
            ],
            "primary_network_interface_id": "eni-0359d4dabcfd0b221",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "54.204.251.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f3cd9b3d4279e21f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b0f850f379066760",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0edc7ec11ab4bc87b"
            ]
          },
          "dependencies": [
            "aws_network_interface.fair_fairytale_network_interface",
            "aws_security_group.fair_fairytale_security_group",
            "aws_subnet.fair_fairytale_subnet",
            "aws_vpc.fair_fairytale_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fair_fairytale_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958616324330:internet-gateway/igw-04d7e6095be03f548",
            "id": "igw-04d7e6095be03f548",
            "owner_id": "958616324330",
            "tags": {
              "Name": "fairFairytaleGateway"
            },
            "tags_all": {
              "Name": "fairFairytaleGateway"
            },
            "vpc_id": "vpc-0dc1354d47f6669a7"
          },
          "dependencies": [
            "aws_vpc.fair_fairytale_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "fair_fairytale_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958616324330:network-interface/eni-0359d4dabcfd0b221",
            "id": "eni-0359d4dabcfd0b221",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:42:f3:c4:c5:83",
            "owner_id": "958616324330",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0edc7ec11ab4bc87b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b0f850f379066760"
          },
          "dependencies": [
            "aws_security_group.fair_fairytale_security_group",
            "aws_subnet.fair_fairytale_subnet",
            "aws_vpc.fair_fairytale_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fair_fairytale_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958616324330:route-table/rtb-076d29851ea2a81c1",
            "id": "rtb-076d29851ea2a81c1",
            "owner_id": "958616324330",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04d7e6095be03f548",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04d7e6095be03f548",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fairFairytaleRouteTable"
            },
            "tags_all": {
              "Name": "fairFairytaleRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc1354d47f6669a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.fair_fairytale_gateway",
            "aws_vpc.fair_fairytale_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fair_fairytale_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083d5105c98e13972",
            "route_table_id": "rtb-076d29851ea2a81c1",
            "subnet_id": "subnet-0b0f850f379066760"
          },
          "dependencies": [
            "aws_internet_gateway.fair_fairytale_gateway",
            "aws_route_table.fair_fairytale_route_table",
            "aws_subnet.fair_fairytale_subnet",
            "aws_vpc.fair_fairytale_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fair_fairytale_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958616324330:security-group/sg-0edc7ec11ab4bc87b",
            "description": "Allow SSH HTTP HTTPS connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0edc7ec11ab4bc87b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "fair_fairytale_security_group",
            "name_prefix": "",
            "owner_id": "958616324330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fairFairytaleSecurityGroup"
            },
            "tags_all": {
              "Name": "fairFairytaleSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc1354d47f6669a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fair_fairytale_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fair_fairytale_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958616324330:subnet/subnet-0b0f850f379066760",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0f850f379066760",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958616324330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fairFairytaleSubnet"
            },
            "tags_all": {
              "Name": "fairFairytaleSubnet"
            },
            "vpc_id": "vpc-0dc1354d47f6669a7"
          },
          "dependencies": [
            "aws_vpc.fair_fairytale_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fair_fairytale_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958616324330:vpc/vpc-0dc1354d47f6669a7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fa52050d6f47fe4a",
            "default_route_table_id": "rtb-084651e76c3021ad1",
            "default_security_group_id": "sg-09bbbbe16f79c2308",
            "dhcp_options_id": "dopt-2efb7755",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0dc1354d47f6669a7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-084651e76c3021ad1",
            "owner_id": "958616324330",
            "tags": {
              "Name": "fairFairytaleVpc"
            },
            "tags_all": {
              "Name": "fairFairytaleVpc"
            }
          }
        }
      ]
    }
  ]
}